--- a/CLIENT/src/style/dark.scss
+++ b/CLIENT/src/style/dark.scss
@@ -100,4 +100,13 @@
     border-color: #333;
     color: #ccc;
   }
+  .success{
+    .pop{
+      background-color: #333;
+      border: 3px solid #000;
+      .container{
+        border: 3px solid #000;
+      }
+    }
+  }
 }
